# adv_cpp_homework_2

./: .travis.yml  CMakeLists.txt  README.md
include/: consistent.h  main.h  parallel.h
src/: consistent.c  main.c  parallel.c
tests/: tests.cpp
